welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:2: error: not found: type string
var couleur:string = "a"
            ^